water balancer ui creation is done

--- a/challenge 1/water tank/src/App.css
+++ b/challenge 1/water tank/src/App.css
@@ -4,3 +4,10 @@
   padding: 2rem;
   text-align: center;
 }
+
+.water__tank__container{
+  display: flex;
+  column-gap: 5rem;
+  justify-content: center;
+  align-items: center;
+}
